--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,21 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.12.6</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openidentityplatform.commons</groupId>
+            <artifactId>json-web-token</artifactId>
+            <version>2.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
